# podder-task-foundation-commands-http

./: README.md  pyproject.toml
podder_task_foundation_commands_http/: RAEDME.md  __init__.py  http.py
podder_task_foundation_commands_http/config/plugins/commands/http/: config.json  entrypoint.json
podder_task_foundation_commands_http/handlers/: __init__.py  config_handler.py  process_handler.py  processes_handler.py
podder_task_foundation_commands_http/responses/: __init__.py  config.py  process.py  processes.py
podder_task_foundation_commands_http/static/css/: main.57a9cd3f.css  main.57a9cd3f.css.map
podder_task_foundation_commands_http/static/js/: 787.9f8001e4.chunk.js  787.9f8001e4.chunk.js.map  main.20283145.js  main.20283145.js.map  main.3452648d.js  main.3452648d.js.map  main.5a6f0179.js  main.5a6f0179.js.LICENSE.txt  main.5a6f0179.js.map  main.6e81eef1.js  main.6e81eef1.js.map  main.83a28ebc.js  main.83a28ebc.js.map  main.86b0e54e.js  main.86b0e54e.js.map  main.a568a919.js  main.a568a919.js.map  main.f279cb18.js  main.f279cb18.js.LICENSE.txt  main.f279cb18.js.map
podder_task_foundation_commands_http/templates/: index.html
tests/: test_podder_task_foundation_commands_http.py
tests/data/: http.json
