[tool.poetry]
name = "podder-task-foundation-commands-http"
version = "0.2.12"
description = "HTTP API interface for podder-task-foundation"
authors = ["Takaaki Mizuno <takaaki.mizuno@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
pytest = "^7.2.2"
yapf = "^0.32.0"
podder-task-foundation = {git = "https://github.com/podder-ai/podder-task-foundation.git", rev = "0.2.18"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins]
[tool.poetry.plugins."podder_task_foundation.commands"]
"podder-task-foundation-commands-http" = "podder_task_foundation_commands_http:get_class"

[tool.setuptools.package-data]
templates=["*.html"]
static=["*"]
